<resources>
    <string name="app_name">The (H)ill Reloded</string>
    <string name="sign_out" />
    <string name="compra_unita_riciclaggio_plastica">compra unita riciclaggio plastica</string>
    <string name="compra_unita_riciclaggio_tecnologia">compra unita riciclaggio tecnologia</string>
    <string name="compra_unita_riciclaggio_acciaio">compra unita riciclaggio acciaio</string>
    <string name="compra_unita_riciclaggio_alluminio">compra unita riciclaggio alluminio</string>
    <string name="compra_unita_riciclaggio_carta">compra unita riciclaggio carta</string>
    <string name="apre_menu_per_acquisto_unita_riciclo">apre menu per acquisto unita riciclo</string>
    <string name="apre_menu_upgrade_unita_riciclo_carta">apre menu upgrade unita riciclo carta</string>
    <string name="apre_menu_upgrade_unita_riciclo_acciaio">apre menu upgrade unita riciclo acciaio</string>
    <string name="apre_menu_upgrade_unita_riciclo_vetro">apre menu upgrade unita riciclo vetro</string>
    <string name="apre_menu_upgrade_unita_riciclo_plastica">apre menu upgrade unita riciclo plastica</string>
    <string name="apre_menu_upgrade_unita_riciclo_alluminio">apre menu upgrade unita riciclo alluminio</string>
    <string name="apre_menu_upgrade_unita_riciclo_tecnologia">apre menu upgrade unita riciclo tecnologia</string>
    <string name="chiude_il_menu_di_upgrade">chiude il menu di upgrade</string>
    <string name="costo_12">Costo: 12</string>
    <string name="costo_40">Costo: 40</string>
    <string name="punti_sole">punti sole</string>
    <string name="costo_25">Costo: 25</string>
    <string name="costo_30">Costo: 30</string>
    <string name="costo_35">Costo: 35</string>
    <string name="immagine_unita_riciclo_carta">immagine unita riciclo carta</string>
    <string name="informazioni_unita_riciclo_carta">informazioni unita riciclo carta</string>
    <string name="tipo_unita_carta">Tipo Unita\': Carta</string>
    <string name="_1">1</string>
    <string name="liv_upgrade">Liv. Upgrade:</string>
    <string name="liv_usura">Liv. Usura:</string>
    <string name="_0">0</string>
    <string name="_24">/24</string>
    <string name="totale_riciclati">Totale Riciclati:</string>
    <string name="costo_4">Costo: 4</string>
    <string name="upgrade_unit">upgrade unità</string>
    <string name="tipo_unita_plastica">Tipo Unita\': Plastica</string>
    <string name="tipo_unita_tecnologia">Tipo Unita\': Tecnologia</string>
    <string name="tipo_unita_acciaio">Tipo Unita\': Acciaio</string>
    <string name="tipo_unita_vetro">Tipo Unita\': Vetro</string>
    <string name="tipo_unita_alluminio">Tipo Unita\': Alluminio</string>
    <string name="immagine_unita_riciclo_acciaio">immagine unita riciclo acciaio</string>
    <string name="informazioni_unita_riciclo_acciaio">informazioni unita riciclo acciaio</string>
    <string name="punti_riciclaggio">punti riciclaggio</string>
    <string name="immagine_unita_riciclo_alluminio">immagine unita riciclo alluminio</string>
    <string name="informazioni_unita_riciclo_alluminio">informazioni unita riciclo alluminio</string>
    <string name="immagine_unita_riciclo_plastica">immagine unita riciclo plastica</string>
    <string name="informazioni_unita_riciclo_plastica">informazioni unita riciclo plastica</string>
    <string name="immagine_unita_riciclo_tecnologia">immagine unita riciclo tecnologia</string>
    <string name="informazioni_unita_riciclo_tecnologia">informazioni unita riciclo tecnologia</string>
    <string name="immagine_unita_riciclo_vetro">immagine unita riciclo vetro</string>
    <string name="informazioni_unita_riciclo_vetro">informazioni unita riciclo vetro</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="crea_nuovo_oggetto_vetro_1">crea nuovo oggetto vetro 1</string>
    <string name="crea_nuovo_oggetto_vetro_2">crea nuovo oggetto vetro 2</string>
    <string name="crea_nuovo_oggetto_vetro_3">crea nuovo oggetto vetro 3</string>
    <string name="costo_2">Costo: 2</string>
    <string name="costo_7">Costo: 7</string>
    <string name="ricavo_1">Ricavo: 1</string>
    <string name="ricavo_6">Ricavo: 6</string>
    <string name="n_0">n: 0</string>
    <string name="informazioni_creazione_nuovo_oggetto_vetro_1">informazioni creazione nuovo oggetto vetro 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_vetro_2">informazioni creazione nuovo oggetto vetro 2</string>
    <string name="informazioni_creazione_nuovo_oggetto_vetro_3">informazioni creazione nuovo oggetto vetro 3</string>
    <string name="crea_nuovo_oggetto_tecnologia_1">crea nuovo oggetto tecnologia 1</string>
    <string name="crea_nuovo_oggetto_tecnologia_2">crea nuovo oggetto tecnologia 2</string>
    <string name="crea_nuovo_oggetto_tecnologia_3">crea nuovo oggetto tecnologia 3</string>
    <string name="informazioni_creazione_nuovo_oggetto_tecnologia_1">informazioni creazione nuovo oggetto tecnologia 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_tecnologia_2">informazioni creazione nuovo oggetto tecnologia 2</string>
    <string name="informazioni_creazione_nuovo_oggetto_tecnologia_3">informazioni creazione nuovo oggetto tecnologia 3</string>
    <string name="crea_nuovo_oggetto_plastica_1">crea nuovo oggetto plastica 1</string>
    <string name="crea_nuovo_oggetto_plastica_2">crea nuovo oggetto plastica 2</string>
    <string name="crea_nuovo_oggetto_plastica_3">crea nuovo oggetto plastica 3</string>
    <string name="informazioni_creazione_nuovo_oggetto_plastica_1">informazioni creazione nuovo oggetto plastica 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_plastica_2">informazioni creazione nuovo oggetto plastica 2</string>
    <string name="informazioni_creazione_nuovo_oggetto_plastica_3">informazioni creazione nuovo oggetto plastica 3</string>
    <string name="crea_nuovo_oogetto_acciaio_1">crea nuovo oogetto acciaio 1</string>
    <string name="crea_nuovo_oggetto_acciaio_2">crea nuovo oggetto acciaio 2</string>
    <string name="crea_nuovo_oggetto_acciaio_3">crea nuovo oggetto acciaio 3</string>
    <string name="informazioni_creazione_nuovo_oggetto_acciaio_1">informazioni creazione nuovo oggetto acciaio 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_acciaio_2">informazioni creazione nuovo oggetto acciaio 2</string>
    <string name="informazioni_creazione_nuova_acciaio_3">informazioni creazione nuova acciaio 3</string>
    <string name="crea_nuovo_oogetto_alluminio_1">crea nuovo oogetto alluminio 1</string>
    <string name="crea_nuovo_oggetto_alluminio_2">crea nuovo oggetto alluminio 2</string>
    <string name="crea_nuovo_oggetto_alluminio_3">crea nuovo oggetto alluminio 3</string>
    <string name="informazioni_creazione_nuovo_oggetto_alluminio_1">informazioni creazione nuovo oggetto alluminio 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_alluminio_2">informazioni creazione nuovo oggetto alluminio 2</string>
    <string name="informazioni_creazione_nuova_alluminio_3">informazioni creazione nuova alluminio 3</string>
    <string name="crea_nuovo_oogetto_carta_1">crea nuovo oogetto carta 1</string>
    <string name="crea_nuovo_oggetto_carta_2">crea nuovo oggetto carta 2</string>
    <string name="crea_nuovo_oggetto_carta_3">crea nuovo oggetto carta 3</string>
    <string name="informazioni_creazione_nuovo_oggetto_carta_1">informazioni creazione nuovo oggetto carta 1</string>
    <string name="informazioni_creazione_nuovo_oggetto_carta_2">informazioni creazione nuovo oggetto carta 2</string>
    <string name="informazioni_creazione_nuova_carta_3">informazioni creazione nuova carta 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agiiungi_unita">aggiungi unita\'</string>
    <string name="chiudi_shop">chiudi shop</string>
    <string name="obiettivo_attuale">Obiettivo Attuale</string>
    <string name="chiudi_menu_missioni">chiudi menu missioni</string>
    <string name="apri_menu_missioni">apri menu missioni</string>
    <string name="apre_menu_pausa_gioco">apre menu pausa gioco</string>
    <string name="pausa">Pausa</string>
    <string name="salva">Salva</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="esci">Esci</string>
    <string name="chiude_menu_pausa">chiude menu pausa</string>
    <string name="title_activity_game_over">GameOver</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="risultati">Risultati</string>
    <string name="sei_sopravvissuto">Sei sopravvissuto:</string>
    <string name="vetro_raccolto">Vetro raccolto:</string>
    <string name="carta_raccolta">Carta raccolta:</string>
    <string name="acciaio_raccolto">Acciaio raccolto:</string>
    <string name="plastica_raccolta">Plastica raccolta:</string>
    <string name="tecnologia_raccolta">Tecnologia raccolta:</string>
    <string name="rifiuti_inceneriti">Rifiuti inceneriti:</string>
    <string name="alluminio_raccolto">Alluminio raccolto:</string>
    <string name="raccolto">Raccolto:</string>
    <string name="oggetti_prodotti">Oggetti prodotti:</string>
    <string name="freccia">freccia</string>
    <string name="torna_al_menu">Torna al menu</string>
    <string name="immagine_carta">immagine carta</string>
    <string name="immagine_vetro">immagine vetro</string>
    <string name="immagine_alluminio">immagine alluminio</string>
    <string name="immagine_acciaio">immagine acciaio</string>
    <string name="immagine_plastica">immagine plastica</string>
    <string name="immagine_tecnologia">immagine tecnologia</string>
    <string name="condividi_risultati">condividi risultati</string>
    <string name="immagine_inceneritore">immagine inceneritore</string>
    <string name="informazioni_inceneritore">informazioni inceneritore</string>
    <string name="tipo_unita_inceneritore">Tipo Unita\': Inceneritore</string>
    <string name="usato">Usato:</string>
    <string name="power_up">Power Up</string>
    <string name="apre_menu_upgrade_inceneritore">apre menu upgrade inceneritore</string>
    <string name="ricavo_2">Ricavo: 2</string>
    <string name="costo_5">Costo: 5</string>
    <string name="ricavo_7">Ricavo: 7</string>
    <string name="ricavo_4">Ricavo: 4</string>
    <string name="costo_3">Costo: 3</string>
    <string name="ricavo_3">Ricavo: 3</string>
    <string name="ricavo_5">Ricavo: 5</string>
    <string name="costo_8">Costo: 8</string>
    <string name="ricavo_8">Ricavo: 8</string>
</resources>